package org.shark.evolvai.admin.model.common;

public enum InferenceContextType {
    USER,
    AREA,
    ORGANIZATION
}
