package org.shark.evolvai.admin.model.common;


public enum MessageRole {
    SYSTEM,
    USER,
    ASSISTANT
}
