@startuml
package "admin.model" {

    abstract class Person {
        UUID id
        String displayName
    }

    class NaturalPerson {
        String firstName
        String lastName
        String nationalId
        LocalDate birthDate
        List<AreaAssignment> areaAssignments
    }

    class LegalPerson {
        String businessName
        String taxId
        String registrationNumber
    }

    class Organization {
        UUID id
        String name
    }

    class Area {
        UUID id
        String name
        Organization organization
        List<AreaAssignment> assignments
    }

    class AreaAssignment {
        UUID id
        Area area
        NaturalPerson person
        LocalDate assignedAt
        String localRole
    }

    class Role {
        UUID id
        String name
        Area area
    }

    class User {
        UUID id
        String email
        String password
        boolean active
        Role role
        NaturalPerson person
    }

    class EmbeddingSource {
        UUID id
        String name
        String description
        String path
    }

    class Prompt {
        UUID id
        String title
        String description
        String version
    }

    class PromptMessage {
        UUID id
        MessageRole role
        String content
        Prompt prompt
    }

    class InferenceConfiguration {
        UUID id
        InferenceContextType contextType
        UUID contextId
        AiRole aiRole
        List<Prompt> prompts
        List<EmbeddingSource> embeddingSources
    }

    enum InferenceContextType {
        USER
        AREA
        ORGANIZATION
    }

    enum MessageRole {
        SYSTEM
        USER
        ASSISTANT
    }

    enum AiRole {
        ASSISTANT
        AUDITOR
        GENERATOR
        REVIEWER
        ANALYST
        OBSERVER
    }

    Person <|-- NaturalPerson
    Person <|-- LegalPerson
    LegalPerson <|-- Organization

    Organization "1" -- "0..*" Area : areas
    Area "1" -- "0..*" AreaAssignment : assignments
    AreaAssignment "1" -- "1" Area : area
    AreaAssignment "1" -- "1" NaturalPerson : person
    NaturalPerson "1" -- "0..*" AreaAssignment : areaAssignments
    Area "1" -- "0..*" Role : roles
    Role "1" -- "0..*" User : users
    User "1" -- "1" Role : role
    User "1" -- "1" NaturalPerson : person

    Prompt "1" -- "0..*" PromptMessage : messages
    PromptMessage "1" -- "1" Prompt : prompt

    InferenceConfiguration "0..*" -- "0..*" Prompt : prompts
    InferenceConfiguration "0..*" -- "0..*" EmbeddingSource : embeddingSources
}
@enduml